# gis-metadata-parser

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
docs/: arcgis-metadata.dtd  fgdc-std.dtd  iso-19139-std.dtd
gis_metadata/: arcgis_metadata_parser.py  exceptions.py  fgdc_metadata_parser.py  iso_metadata_parser.py  metadata_parser.py  parser_utils.py  utils.py
gis_metadata/metadata/: fgdc_metadata_parser.py  iso_metadata_parser.py  metadata_parser.py  parser_utils.py
gis_metadata/metadata/tests/: tests.py
gis_metadata/metadata/tests/data/: fgdc_metadata.xml  iso_metadata.xml
gis_metadata/tests/: tests.py
gis_metadata/tests/data/: arcgis_metadata.xml  fgdc_metadata.xml  iso_citation_href.xml  iso_citation_linkage.xml  iso_metadata.xml  test_arcgis.xml  utility_metadata.xml
gis_metadata/xml/: element_utils.py
gis_metadata/xml/tests/: tests.py
gis_metadata/xml/tests/data/: elem_data.xml  namespace_data.xml
