[tool.poetry]
name = "gis-metadata-parser"
version = "2.0.1"
description = "Parser for GIS metadata standards including ArcGIS, FGDC and ISO-19115"
authors = ["dharvey-consbio <dani.harvey@consbio.org>"]
keywords = ["arcgis", "fgdc", "iso", "ISO-19115", "ISO-19139", "gis", "metadata", "parser", "xml", "gis_metadata", "gis_metadata_parser"]
readme = "README.md"
homepage = "https://github.com/consbio/gis-metadata-parser/"
repository = "https://github.com/consbio/gis-metadata-parser/"
license = "BSD"
packages = [
    { include = "gis_metadata" },
]

[tool.poetry.dependencies]
python = "^3.6"
frozendict = "^2.0"
parserutils = "^2.0.1"

[tool.poetry.dev-dependencies]
mock = "*"
pipdeptree = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
